--- a/src/AppBundle/Resources/views/Site/thankYou.html.twig
+++ b/src/AppBundle/Resources/views/Site/thankYou.html.twig
@@ -11,7 +11,7 @@
             </div>
             <br/>
             <div>
-                The answer will be sent to:<br/><em>cjkhk@blabla.com</em>
+                The answer will be sent to:<br/><em>{{ contact.email }}</em>
             </div>
             <br/>
             <div>
