--- a/src/AppBundle/Resources/views/Contact/index.html.twig
+++ b/src/AppBundle/Resources/views/Contact/index.html.twig
@@ -1,47 +1,41 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::base.html.twig' %}
+
+{% set page_title = "Contact Requests" %}
 
 {% block body -%}
-    <h1>Contact list</h1>
 
-    <table class="records_list">
+    <table class="table table-condensed table-hover">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Weddingdate</th>
-                <th>Location</th>
-                <th>Message</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th></th>
+            <th>Name(s)</th>
+            <th>Wedding date</th>
+            <th>Location</th>
+            <th>Message</th>
+            <th>Received</th>
+            <th></th>
+        </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('contact_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                <td>{% if entity.weddingDate %}{{ entity.weddingDate|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if entity.weddingDate %}{{ entity.weddingDate|date('D d/M/Y') }}{% endif %}</td>
                 <td>{{ entity.location }}</td>
-                <td>{{ entity.message }}</td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('contact_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('contact_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                    <a href="#" data-toggle="popover" title="{{ entity.name }}" data-content="{{ entity.message }}">{{ entity.message|truncate(20) }}</a>
+                </td>
+                <td>{{ entity.created|date('d/m/Y H:i') }}</td>
+                <td>
+                    <ul class="list-inline text-center">
+                        <li>
+                            <a href="{{ path('contact_show', { 'id': entity.id }) }}"><i class="glyphicon glyphicon-eye-open"></i></a>
+                        </li>
+                    </ul>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('contact_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+{% endblock %}
