add content to about me

--- a/src/AppBundle/Resources/views/Site/aboutMe.html.twig
+++ b/src/AppBundle/Resources/views/Site/aboutMe.html.twig
@@ -4,8 +4,13 @@
 
 {% block body %}
 
-    <div class="section" style=" height: 200px; ">
+        <p>My name is Mayela Miridis, I have been a wedding minister since 2007 with well over 800 ceremonies experience in Cancun and the Riviera Maya. I'm fluent in english and german. I love my job! I get to meet lovely people and be a part of one of the most important days of their lives.</p>
+        <p>My philosophy is to create a ceremony that speaks of who you both are, with touches of your love story so it stays in your memory forever. That is why scheduling a face to face skype conversation will be an important part of the process, in order to get to know each other a little, and learn more about you, your style, taste and values.</p>
+        <p>Being very respectful of cultural traditions and religious backgrounds I design different kinds of ceremonies depending on your wishes.</p>
 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        .</div>
+        <ul>
+            <li>Christian Ceremonies</li>
+            <li>Religious Non Denominational Ceremonies as well as,</li>
+            <li>Non Religious Ceremonies</li>
+        </ul>
 {% endblock %}
