use assetic for images

--- a/src/AppBundle/Resources/views/Site/index.html.twig
+++ b/src/AppBundle/Resources/views/Site/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-    <div class="home-img"><img src="/images/center-image.jpg"/></div>
+    <div class="home-img"><img src="{{ asset('images/center-image.jpg') }}/></div>
 
     {{ include('AppBundle::_menu.html.twig') }}
 
