--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12"><img src="/images/header-mayela-miridis.png" style="margin: 0 auto; max-width: 100%;"></div>
+                <div class="col-sm-12"><img src="{{ asset('images/header-mayela-miridis.png') }}" style="margin: 0 auto; max-width: 100%;"></div>
             </div>
         </div>
 
