gallery fotos updated and menu moved to top

--- a/web/css/06ac469.css
+++ b/web/css/06ac469.css
@@ -5876,7 +5876,8 @@ div.menu {
           border-bottom: 1px solid #b76972; }
 
 div.home-img {
-  padding-top: 50px; }
+  padding-top: 50px;
+  padding-bottom: 50px; }
   div.home-img img {
     display: block;
     height: auto;
